# CricketRAG

./: .dockerignore  .env.example  DOCKER.md  Dockerfile  README.md  docker-compose.yaml  package-lock.json  pyproject.toml
frontend/src/: App.tsx
queries/: count_documents.pgsql  drop_index.pgsql
src/: __init__.py  config.py  dependencies.py  main.py  repositories.py  schemas.py
src/history/: __init__.py  dependencies.py  models.py  repositories.py  routes.py  schemas.py  services.py
src/rag/: __init__.py  repositories.py  routes.py  services.py
src/scripts/: run_init_db.py  run_load_embeddings.py
tests/: test_ollama.py  test_query_vector_store.py
